--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "psr/simple-cache": "2.0",
+        "pxlrbt/filament-excel": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
